modemu2k ChangeLog

2020-06-19

  * v0.0.6 released

2020-06-18

  * Fix for compiling on gcc-10

2019-8-23

  * v0.0.5 released

2019-8-22

  * When making a connection, a message is printed informing the user
  how to escape to command mode and return to online mode.

  * Modemu2k no longer makes a distinction between a numeric address
  and a hostname.


2019-8-21

  * IPv6 connections can now be made.

  * To specify a non-standard port, you must use a space now instead of
  a colon


2019-8-19

  * Replaced obsolete gethostbyname() with getaddrinfo()

  * If the m2k-minicom.sh script is run from the scripts/ directory, it will
  use the dev build of modemu2k in src/


2019-08-18

  * v0.0.4 released

2019-08-17

  * Fixed --version output

  * Added script to invoke minicom: 'm2k-minicom.sh'

  * Infrastructure to implement testing with `make check` added.


2018-10-17

  * v0.0.3 released

2018-10-14

  * zh_CN translation added
  * nl_NL translation added

2018-10-13

  * Removed "-" option
  * Added support for translated messages using the GNU gettext library
  * Improved usage output
  * Now using getopt.h to parse cmd args

2018-10-11

  * it_IT translation of man page added


2018-10-08

  * pt_BR translation of man page added

2018-09-06

  * Added quit instructions to start-up screen
  * auto-generated config.h is now used
  * man file will now install
  * issue v0.0.2 release


2018-09-05

  * applied patch from https://github.com/aur-archive/modemu
  * Added configure script, autoconf and automake file
  * increase version to 0.0.2-dev
  * modemu2k Fork created
